k8s/infrastructure.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: factory-x
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: factory-x
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: pgvector/pgvector:pg16
          ports:
            - containerPort: 5432
          command: [ "postgres", "-c", "wal_level=logical" ]
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: factory-x
spec:
  ports:
    - port: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: factory-x
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.2-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: factory-x
spec:
  ports:
    - port: 9092
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: factory-x
spec:
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: soldevelo/kafka:3.7
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: debezium
  namespace: factory-x
spec:
  ports:
    - port: 8083
  selector:
    app: debezium
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debezium
  namespace: factory-x
spec:
  selector:
    matchLabels:
      app: debezium
  template:
    metadata:
      labels:
        app: debezium
    spec:
      containers:
        - name: debezium
          image: debezium/connect:2.7.3.Final
          ports:
            - containerPort: 8083
